# texttosql

./: .dockerignore  DEPLOY.md  Dockerfile  Dockerfile.streamlit  README.md  alembic.ini  dim_process.csv  dim_worker.csv  docker-compose.yml  fact_order_daily.csv  pyproject.toml  pytest.ini  railway.json  railway.streamlit.json
.claude/: settings.json  settings.local.json
alembic/: env.py
alembic/versions/: 05cc62626ad2_init.py  6b2e0f1c5d7a_add_fact_order_daily.py
docs/: chatbot_plan.md
sql_csv/: fact_production_daily.csv
src/frontend/: app.py
src/t2sql/: main.py  requirements.txt
src/t2sql/db/: base.py  session.py
src/t2sql/db/models/: __init__.py  dim_process.py  dim_worker.py  fact_order_daily.py
src/t2sql/routers/: api.py  chat_sse.py  query.py  question_generate.py
src/t2sql/schemas/: query.py
src/t2sql/scripts/embedding/: embed_fewshot.py  embed_schema.py
src/t2sql/services/llm/: hard_edge_question_generator.py  intent_classifier.py  llm_client.py  llm_edge_question_generator.py  (+1 more)
t2sql/: pyproject.toml
t2sql/src/t2sql/: main.py
t2sql/src/t2sql/db/: base.py  session.py
t2sql/src/t2sql/db/models/: __init__.py  production.py
t2sql/src/t2sql/routers/: query.py
t2sql/src/t2sql/schemas/: query.py
t2sql/src/t2sql/services/llm/: llm_client.py
t2sql/src/t2sql/services/query/: query_service.py  sql_validator.py
tests/: after2_cte.md  after_rag.md  after_rag_fewshot.md  after_rag_fewshot_semantic.md  conftest.py  test_api.py  test_semantic_fewshot.py
tests/pytest/: __init__.py  conftest.py  test_api.py  test_semantic_fewshot.py
(+3 files in other folders)
