[project]
name = "t2sql"
version = "0.1.0"
description = ""
authors = [
    {name = "박시현",email = "solarhyun87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "t2sql", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
